--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -3644,7 +3644,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ANALYSIS & OBSERVABLE TRENDS BASED ON THE DATA:\n",
+    "\n",
+    "Observations based on the data:\n",
+    "    Charter schools have higher reading and math scores on average.\n",
+    "    Charter schools have lower budgets than Disrict schools.\n",
+    "    Charter schools have fewer total students than District schools.\n",
+    "    \n",
+    "Summary of analysis:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
